add test to create,get wrodset and add words to wordset